--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "my-express-server",
+  "name": "calculator",
   "version": "1.0.0",
-  "description": "My first express server",
-  "main": "server.js",
+  "description": "A calculator",
+  "main": "calculator.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rhiannon Hayes",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "express": "^4.17.3"
   }
 }
