Added Weather Project

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "calculator",
+  "name": "weatherproject",
   "version": "1.0.0",
-  "description": "A calculator",
-  "main": "calculator.js",
+  "description": "",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Rhiannon Hayes",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
