--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "newsletter-signup",
+  "name": "todolist-v1",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start":"node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.2",
-    "express": "^4.17.3",
-    "request": "^2.88.2"
+    "ejs": "^3.1.6",
+    "express": "^4.17.3"
   }
 }
